# pep_bot

./: .gitignore  Cargo.toml  README.md  config.yaml.example
docker/: Dockerfile  build-image.sh  docker-compose.yml
docker/root/etc/cont-init.d/: 01-pep-run
docker/root/etc/fix-attrs.d/: 01-pep-data-dir
src/: main.rs
src/commands/: mod.rs  pep.rs
src/config/: matrix.rs  mod.rs
src/errors/: mod.rs
src/matrix/: mod.rs  sync.rs
