[package]
name = "pep_bot"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.matrix-sdk]
version = "0.4.1"
default-features = false
features = ["encryption", "sled_cryptostore", "sled_state_store", "require_auth_for_profile_requests", "rustls-tls", "markdown"]

[dependencies]
# with fix
mrsbfh = {version = "0.4.1", default-features = false, features = ["rustls", "macros"]}
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
clap = "2.33"
serde = "1"
async-trait = "0.1"
thiserror = "1"
regex = "1"
rand = "0.8"
lazy_static = "1"
